# final

./: CMakeLists.txt
include/ass3/: mesh.hpp  model.hpp  shader.hpp  task.hpp  util.hpp
res/shaders/: 2b_hdr.fs  2b_hdr_lighting.fs  3b_realtime_cubemaps_rotation.fs  3b_realtime_cubemaps_rotation.vs  4d_ssao.fs  4d_ssao_geometry.fs  4d_ssao_geometry.vs  4d_ssao_lighting.fs  5_shadow_map_depth.fs  5_shadow_map_depth.gs  basic.fs  basic.vs
src/: main.cpp  memes.cpp  task.cpp  task_hdr_mirror.cpp  task_realtime_cube_map.cpp  task_ssao_shadow.cpp  util.cpp
